<resources>
    <string name="app_name">CoachCom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="app_notifications">App notifications</string>
    <string name="todo">TODO</string>
    <string name="theme">Theme</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change password</string>
    <string name="checkup_planner">Checkup planner</string>
    <string name="edit_profile">Edit profile</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="help_and_support">Help and support</string>
    <string name="more">More</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification_icon">notification_icon</string>
    <string name="more_icon">more_icon</string>
</resources>