<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F2F2">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.chip.Chip
            android:id="@+id/client_settings_physical_measurements"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/client_settings_password"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="Enter physical measurements" />

        <com.google.android.material.chip.Chip
            android:id="@+id/client_settings_target_measurements"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/client_settings_physical_measurements"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="Enter target measurements" />

        <View
            android:id="@+id/separatorView16"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/more_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-35dp"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/separatorView1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/account_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-60dp"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/separatorView15"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/notifications_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-40dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.chip.Chip
            android:id="@+id/theme"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/separatorView16"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/privacy"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/about"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/privacy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/feedback"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/privacy"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/feedback" />

        <com.google.android.material.chip.Chip
            android:id="@+id/about"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/help"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/about" />

        <com.google.android.material.chip.Chip
            android:id="@+id/language"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/theme"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/language" />

        <com.google.android.material.chip.Chip
            android:id="@+id/help"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/language"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/help_and_support" />

        <TextView
            android:id="@+id/notifications_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_settings_target_measurements"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/notification_icon"
            android:text="@string/notifications"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_below="@+id/client_settings_target_measurements"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/notification_icon"
            android:src="@drawable/baseline_edit_notifications_24" />

        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/separatorView15"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/notifications_title"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/app_switch"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/notifications_switch"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_notifications"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <com.google.android.material.chip.Chip
            android:id="@+id/client_settings_password"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/client_settings_personal"
            android:layout_alignParentStart="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/more_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_switch"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="223dp"
            android:layout_toEndOf="@+id/more_icon"
            android:text="@string/more"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/account"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_person_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/client_settings_personal"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/separatorView1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:text="Change personal information" />

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_below="@+id/app_switch"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/more_icon"
            android:src="@drawable/plus" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="139dp"
            android:text="Settings"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/client_settings_logoutButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/feedback"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="Logout" />

    </RelativeLayout>

</ScrollView>